dataset1235/2025-2/1153765216/users/1937138466/executions/2747719322_775838323.log
== SUBMISSION (2025-08-19 03:40:35)
-- CODE: 
num =  floaat(input("digite um numero: "))
x = num + 3

print(round(x, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    num =  floaat(input("digite um numero: "))
           ^^^^^^
NameError: name 'floaat' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    num =  floaat(input("digite um numero: "))
           ^^^^^^
NameError: name 'floaat' is not defined. Did you mean: 'float'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 03:40:42)
-- CODE: 
num =  float(input("digite um numero: "))
x = num + 3

print(round(x, 1))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
digite um numero: 4.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
digite um numero: 4.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
